--- a/Application/src/main/res/values/styles.xml
+++ b/Application/src/main/res/values/styles.xml
@@ -15,17 +15,9 @@
 -->
 
 <resources>
-    <string name="app_name">WatchFace</string>
-    <string name="intro_message">
-        <![CDATA[
-        
-            
-This sample demonstrates how to create watch faces for android wear and includes a phone app
-and a wearable app. The wearable app has a variety of watch faces including analog, digital,
-opengl, calendar, etc. It also includes a watch-side configuration example. The phone app
-includes a phone-side configuration example.
-            
-        
-        ]]>
-    </string>
+
+    <!-- Activity themes -->
+    <style name="Theme.Base" parent="android:Theme.Holo.Light"></style>
+    <style name="AppTheme" parent="Theme.Base"></style>
+
 </resources>
