--- a/Application/src/main/res/layout/activity_circa_text_config.xml
+++ b/Application/src/main/res/layout/activity_circa_text_config.xml
@@ -107,6 +107,7 @@
         android:orientation="horizontal">
 
         <TextView
+            android:id="@+id/exclude_calendars_text_view"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
@@ -116,7 +117,10 @@
             android:id="@+id/exclude_calendars"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_weight="3" />
+            android:layout_weight="3"
+            android:inputType="text"
+            android:hint="@string/excluded_calendar_hint"
+            android:labelFor="@+id/exclude_calendars_text_view" />
     </LinearLayout>
 
 </LinearLayout>
