--- a/Application/src/main/res/layout/activity_circa_text_config.xml
+++ b/Application/src/main/res/layout/activity_circa_text_config.xml
@@ -104,14 +104,15 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal">
+        android:orientation="horizontal" >
 
         <TextView
             android:id="@+id/exclude_calendars_text_view"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:text="@string/digital_config_calendars" />
+            android:text="@string/digital_config_calendars"
+            android:layout_marginBottom="20dp" />
 
         <EditText
             android:id="@+id/exclude_calendars"
@@ -121,6 +122,32 @@
             android:hint="@string/excluded_calendar_hint"
             android:inputType="text"
             android:labelFor="@+id/exclude_calendars_text_view" />
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="3dp"
+        android:background="@color/black"
+        android:orientation="horizontal" />
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:layout_marginTop="5dp" >
+
+        <TextView
+            android:id="@+id/attributions_text_view"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="@string/digital_config_attribution" />
+
+        <TextView
+            android:id="@+id/attributions"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="3" />
     </LinearLayout>
 
 </LinearLayout>
