Use OpenWeatherMap and proper API key.

--- a/Application/src/main/res/layout/activity_circa_text_config.xml
+++ b/Application/src/main/res/layout/activity_circa_text_config.xml
@@ -126,8 +126,8 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="3dp"
-        android:background="@color/black"
+        android:layout_height="1dp"
+        android:background="@color/grey"
         android:orientation="horizontal" />
 
     <LinearLayout
