--- a/Wearable/src/main/res/values/dimens.xml
+++ b/Wearable/src/main/res/values/dimens.xml
@@ -22,4 +22,5 @@
     <dimen name="digital_x_offset">15dp</dimen>
     <dimen name="digital_x_offset_round">25dp</dimen>
     <dimen name="digital_y_offset">95dp</dimen>
+    <dimen name="digital_y_offset_circatext">65dp</dimen>
 </resources>
