--- a/Wearable/src/main/res/values/dimens.xml
+++ b/Wearable/src/main/res/values/dimens.xml
@@ -14,6 +14,12 @@
 -->
 
 <resources>
-    <dimen name="digital_x_offset">15dp</dimen>
-    <dimen name="digital_x_offset_round">25dp</dimen>
+     <dimen name="digital_text_size">40dp</dimen>
+     <dimen name="digital_text_size_round">45dp</dimen>
+     <dimen name="digital_date_text_size">20dp</dimen>
+     <dimen name="digital_small_date_text_size">15dp</dimen>
+     <dimen name="digital_x_offset">15dp</dimen>
+     <dimen name="digital_x_offset_round">25dp</dimen>
+     <dimen name="digital_y_offset">95dp</dimen>
+     <dimen name="digital_y_offset_circatext">65dp</dimen>
 </resources>
