--- a/Wearable/src/main/res/layout/color_picker_item.xml
+++ b/Wearable/src/main/res/layout/color_picker_item.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<merge
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<merge xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <android.support.wearable.view.CircledImageView
@@ -8,20 +7,20 @@
         android:layout_width="52dp"
         android:layout_height="52dp"
         android:layout_gravity="center_vertical"
+        android:layout_margin="2dp"
         app:circle_border_color="@color/color_item_label_color"
-        app:circle_radius="26dp"
         app:circle_border_width="1dp"
-        android:layout_margin="2dp" />
+        app:circle_radius="26dp" />
 
     <TextView
         android:id="@+id/label"
-        android:fontFamily="sans-serif-condensed-light"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center_vertical"
         android:layout_marginLeft="10dp"
-        android:textColor="@color/color_item_label_color"
-        android:textSize="18sp"
+        android:background="@color/transparent"
+        android:fontFamily="sans-serif-condensed-light"
         android:text="Placeholder"
-        android:background="@color/transparent"/>
+        android:textColor="@color/color_item_label_color"
+        android:textSize="18sp" />
 </merge>
