--- a/Application/src/main/res/layout/activity_circa_text_config.xml
+++ b/Application/src/main/res/layout/activity_circa_text_config.xml
@@ -16,30 +16,33 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:padding="5dp">
 
-    <LinearLayout
+    <TextView
+        android:id="@+id/exclude_calendars_text_view"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/digital_config_calendars"
+        android:padding="5dp"
+        android:textColor="@color/black"
+        android:textSize="24dp" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/excluded_calendar_explanation"
+        android:id="@+id/exclude_calendars_expanation"
+        android:padding="5dp" />
+
+    <EditText
+        android:id="@+id/exclude_calendars"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal">
-
-        <TextView
-            android:id="@+id/exclude_calendars_text_view"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="20dp"
-            android:layout_weight="1"
-            android:text="@string/digital_config_calendars" />
-
-        <EditText
-            android:id="@+id/exclude_calendars"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="3"
-            android:hint="@string/excluded_calendar_hint"
-            android:inputType="text"
-            android:labelFor="@+id/exclude_calendars_text_view" />
-    </LinearLayout>
+        android:hint="@string/excluded_calendar_hint"
+        android:inputType="text"
+        android:labelFor="@+id/exclude_calendars_text_view"
+        android:padding="5dp" />
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -47,24 +50,12 @@
         android:background="@color/dark_grey"
         android:orientation="horizontal" />
 
-    <LinearLayout
+    <TextView
+        android:id="@+id/attributions"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="5dp"
-        android:orientation="horizontal">
-
-        <TextView
-            android:id="@+id/attributions_text_view"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:text="@string/digital_config_attribution" />
-
-        <TextView
-            android:id="@+id/attributions"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="3" />
-    </LinearLayout>
+        android:layout_height="match_parent"
+        android:textColor="@color/black"
+        android:padding="5dp"
+        android:text="@string/digital_config_attribution_text" />
 
 </LinearLayout>
