--- a/Wearable/src/main/res/layout/activity_config.xml
+++ b/Wearable/src/main/res/layout/activity_config.xml
@@ -1,16 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.wearable.view.BoxInsetLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/content"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/transparent">
+    android:background="@color/transparent"
+    tools:ignore="Overdraw">
 
     <TextView
         android:id="@+id/header"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="16dp"
+        android:layout_marginStart="16dp"
         android:layout_marginTop="14dp"
         android:fontFamily="sans-serif-condensed-light"
         android:text="@string/digital_background_color"
@@ -22,6 +24,5 @@
         android:id="@+id/watchface_picker"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@android:color/transparent"
         app:layout_box="left|right" />
 </android.support.wearable.view.BoxInsetLayout>
