--- a/Application/src/main/res/layout/activity_circa_text_config.xml
+++ b/Application/src/main/res/layout/activity_circa_text_config.xml
@@ -26,7 +26,7 @@
         android:padding="5dp"
         android:text="@string/digital_config_calendars"
         android:textColor="@color/black"
-        android:textSize="24dp" />
+        android:textSize="24sp" />
 
     <TextView
         android:id="@+id/exclude_calendars_expanation"
