--- a/Wearable/src/main/res/layout/watchface_picker_item.xml
+++ b/Wearable/src/main/res/layout/watchface_picker_item.xml
@@ -23,10 +23,10 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical"
-            android:layout_marginLeft="10dp"
+            android:layout_marginStart="10dp"
             android:background="@color/transparent"
             android:fontFamily="sans-serif-condensed-light"
-            android:text="Placeholder"
+            android:text="@string/placeholder"
             android:textColor="@color/color_item_label_color"
             android:textSize="18sp" />
 
@@ -35,10 +35,10 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical"
-            android:layout_marginLeft="10dp"
+            android:layout_marginStart="10dp"
             android:background="@color/transparent"
             android:fontFamily="sans-serif-condensed-light"
-            android:text="Placeholder"
+            android:text="@string/placeholder"
             android:textColor="@color/color_item_label_color"
             android:textSize="12sp" />
     </LinearLayout>
