--- a/Application/src/main/res/layout/activity_circa_text_config.xml
+++ b/Application/src/main/res/layout/activity_circa_text_config.xml
@@ -19,6 +19,12 @@
     android:orientation="vertical"
     android:padding="5dp">
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:background="@color/dark_grey"
+        android:orientation="horizontal" />
+
     <TextView
         android:id="@+id/exclude_calendars_text_view"
         android:layout_width="wrap_content"
@@ -51,11 +57,37 @@
         android:orientation="horizontal" />
 
     <TextView
+        android:id="@+id/weather_text_view"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:padding="5dp"
+        android:text="@string/digital_config_weather"
+        android:textColor="@color/black"
+        android:textSize="24sp" />
+
+    <Button
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:text="Wetter Aktualisieren"
+        android:id="@+id/weather_update_button" />
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:background="@color/dark_grey"
+        android:orientation="horizontal" />
+
+    <TextView
         android:id="@+id/attributions"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:padding="5dp"
         android:text="@string/digital_config_attribution_text"
         android:textColor="@color/black" />
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:background="@color/dark_grey"
+        android:orientation="horizontal" />
 </LinearLayout>
