--- a/Application/src/main/res/layout/activity_circa_text_config.xml
+++ b/Application/src/main/res/layout/activity_circa_text_config.xml
@@ -19,12 +19,6 @@
     android:orientation="vertical"
     android:padding="5dp">
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="1dp"
-        android:background="@color/dark_grey"
-        android:orientation="horizontal" />
-
     <TextView
         android:id="@+id/exclude_calendars_text_view"
         android:layout_width="wrap_content"
@@ -50,12 +44,6 @@
         android:labelFor="@+id/exclude_calendars_text_view"
         android:padding="5dp" />
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="1dp"
-        android:background="@color/dark_grey"
-        android:orientation="horizontal" />
-
     <TextView
         android:id="@+id/weather_text_view"
         android:layout_width="wrap_content"
@@ -64,6 +52,30 @@
         android:text="@string/digital_config_weather"
         android:textColor="@color/black"
         android:textSize="24sp" />
+
+    <RadioGroup
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/weatherselection">
+
+        <RadioButton
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/radiobutton_openweathermap"
+            android:id="@+id/radioButtonOWM" />
+
+        <RadioButton
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/radiobutton_yahooweather"
+            android:id="@+id/radioButtonYahoo" />
+
+        <RadioButton
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/radiobutton_wunderground"
+            android:id="@+id/radioButtonWUnderground" />
+    </RadioGroup>
 
     <Button
         android:id="@+id/weather_update_button"
